docs.kosli.com/content/legacy_ref/v0.1.40/kosli_rename_environment.md
---
title: "kosli rename environment"
---

# kosli rename environment

## Synopsis

Rename a Kosli environment.
The environment will remain accessible under its old name until that name is taken by another environment.


```shell
kosli rename environment OLD_NAME NEW_NAME [flags]
```

## Flags
| Flag | Description |
| :--- | :--- |
|    -D, --dry-run  |  [optional] Run in dry-run mode. When enabled, no data is sent to Kosli and the CLI exits with 0 exit code regardless of any errors.  |
|    -h, --help  |  help for environment  |


## Options inherited from parent commands
| Flag | Description |
| :--- | :--- |
|    -a, --api-token string  |  The Kosli API token.  |
|    -c, --config-file string  |  [optional] The Kosli config file path. (default "kosli")  |
|        --debug  |  [optional] Print debug logs to stdout.  |
|    -H, --host string  |  [defaulted] The Kosli endpoint. (default "https://app.kosli.com")  |
|    -r, --max-api-retries int  |  [defaulted] How many times should API calls be retried when the API host is not reachable. (default 3)  |
|        --org string  |  The Kosli organization.  |


## Examples

```shell

# rename a Kosli environment:
kosli rename environment oldName newName \
	--api-token yourAPIToken \
	--org yourOrgName 

```

